// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackStats renders with default values 1`] = `
<body>
  <div>
    <svg
      viewBox="-10 -75 230 130"
      x="0"
      y="0"
    >
      
      <g
        class="model svelte-1l7llm0"
        data-id="straight-tile-1"
      >
        <g
          class="tile straight-tile"
          transform=""
        >
          <path
            d="M 0,-65 H 90 V 45 H 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier straight-barrier"
          >
            
            <path
              d="M 0,-65 H 5 V -37.5 H 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 0,-37.5 H 5 V -10 H 0 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 0,-10 H 5 V 17.5 H 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 0,17.5 H 5 V 45 H 0 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <path
              d="M 85,-65 H 90 V -37.5 H 85 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 85,-37.5 H 90 V -10 H 85 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 85,-10 H 90 V 17.5 H 85 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 85,17.5 H 90 V 45 H 85 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
        <text
          class="svelte-1l7llm0"
          dominant-baseline="middle"
          fill="var(--color-fg)"
          font-size="30px"
          text-anchor="middle"
          x="45"
          y="-10"
        >
          1
        </text>
      </g>
      <g
        class="model svelte-1l7llm0"
        data-id="curved-tile-1"
      >
        <g
          class="tile curved-tile"
          transform=""
        >
          <path
            d="M 120,-60 A 10,10 0 0 1 110,-50 L 110,40 A 100,100 0 0 0 210,-60 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 120,-60 A 10,10 0 0 1 117.07106781186548,-52.928932188134524 L 120.60660171779821,-49.39339828220179 A 15,15 0 0 0 125,-60 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 117.07106781186548,-52.928932188134524 A 10,10 0 0 1 110,-50 L 110,-45 A 15,15 0 0 0 120.60660171779821,-49.39339828220179 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 205,-60 A 95,95 0 0 1 197.76855558857224,-23.645073925316474 L 202.3879532511287,-21.731656763491024 A 100,100 0 0 0 210,-60 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 197.76855558857224,-23.645073925316474 A 95,95 0 0 1 177.17514421272202,7.175144212722003 L 180.71067811865476,10.71067811865474 A 100,100 0 0 0 202.3879532511287,-21.731656763491024 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 177.17514421272202,7.175144212722003 A 95,95 0 0 1 146.35492607468353,27.76855558857224 L 148.268343236509,32.38795325112868 A 100,100 0 0 0 180.71067811865476,10.71067811865474 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 146.35492607468353,27.76855558857224 A 95,95 0 0 1 110,35 L 110,40 A 100,100 0 0 0 148.268343236509,32.38795325112868 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
        <text
          class="svelte-1l7llm0"
          dominant-baseline="middle"
          fill="var(--color-fg)"
          font-size="30px"
          text-anchor="middle"
          x="160"
          y="-10"
        >
          1
        </text>
      </g>
      
    </svg>
    
  </div>
</body>
`;

exports[`TrackStats renders with the given parameters 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-10 -75 230 130"
      width="400"
      x="100"
      y="200"
    >
      
      <g
        class="model svelte-1l7llm0"
        data-id="straight-tile-1"
      >
        <g
          class="tile straight-tile"
          transform=""
        >
          <path
            d="M 0,-65 H 90 V 45 H 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier straight-barrier"
          >
            
            <path
              d="M 0,-65 H 5 V -37.5 H 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 0,-37.5 H 5 V -10 H 0 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 0,-10 H 5 V 17.5 H 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 0,17.5 H 5 V 45 H 0 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <path
              d="M 85,-65 H 90 V -37.5 H 85 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 85,-37.5 H 90 V -10 H 85 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 85,-10 H 90 V 17.5 H 85 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 85,17.5 H 90 V 45 H 85 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
        <text
          class="svelte-1l7llm0"
          dominant-baseline="middle"
          fill="var(--color-fg)"
          font-size="30px"
          text-anchor="middle"
          x="45"
          y="-10"
        >
          1
        </text>
      </g>
      <g
        class="model svelte-1l7llm0"
        data-id="curved-tile-1"
      >
        <g
          class="tile curved-tile"
          transform=""
        >
          <path
            d="M 120,-60 A 10,10 0 0 1 110,-50 L 110,40 A 100,100 0 0 0 210,-60 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 120,-60 A 10,10 0 0 1 117.07106781186548,-52.928932188134524 L 120.60660171779821,-49.39339828220179 A 15,15 0 0 0 125,-60 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 117.07106781186548,-52.928932188134524 A 10,10 0 0 1 110,-50 L 110,-45 A 15,15 0 0 0 120.60660171779821,-49.39339828220179 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 205,-60 A 95,95 0 0 1 197.76855558857224,-23.645073925316474 L 202.3879532511287,-21.731656763491024 A 100,100 0 0 0 210,-60 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 197.76855558857224,-23.645073925316474 A 95,95 0 0 1 177.17514421272202,7.175144212722003 L 180.71067811865476,10.71067811865474 A 100,100 0 0 0 202.3879532511287,-21.731656763491024 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 177.17514421272202,7.175144212722003 A 95,95 0 0 1 146.35492607468353,27.76855558857224 L 148.268343236509,32.38795325112868 A 100,100 0 0 0 180.71067811865476,10.71067811865474 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 146.35492607468353,27.76855558857224 A 95,95 0 0 1 110,35 L 110,40 A 100,100 0 0 0 148.268343236509,32.38795325112868 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
        <text
          class="svelte-1l7llm0"
          dominant-baseline="middle"
          fill="var(--color-fg)"
          font-size="30px"
          text-anchor="middle"
          x="160"
          y="-10"
        >
          1
        </text>
      </g>
      
    </svg>
    
  </div>
</body>
`;

exports[`TrackStats updates when the model is modified 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-10 -75 350 130"
      width="400"
      x="100"
      y="200"
    >
      
      <g
        class="model svelte-1l7llm0"
        data-id="straight-tile-1"
      >
        <g
          class="tile straight-tile"
          transform=""
        >
          <path
            d="M 0,-65 H 90 V 45 H 0 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier straight-barrier"
          >
            
            <path
              d="M 0,-65 H 5 V -37.5 H 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 0,-37.5 H 5 V -10 H 0 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 0,-10 H 5 V 17.5 H 0 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 0,17.5 H 5 V 45 H 0 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <path
              d="M 85,-65 H 90 V -37.5 H 85 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 85,-37.5 H 90 V -10 H 85 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 85,-10 H 90 V 17.5 H 85 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 85,17.5 H 90 V 45 H 85 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
        <text
          class="svelte-1l7llm0"
          dominant-baseline="middle"
          fill="var(--color-fg)"
          font-size="30px"
          text-anchor="middle"
          x="45"
          y="-10"
        >
          2
        </text>
      </g>
      <g
        class="model svelte-1l7llm0"
        data-id="curved-tile-enlarged-1"
      >
        <g
          class="tile curved-tile-enlarged"
          transform=""
        >
          <path
            d="M 120,-60 A 10,10 0 0 1 110,-50 V 40 H 165 A 45,45 0 0 0 210,-5 V -60 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 120,-60 A 10,10 0 0 1 117.07106781186548,-52.928932188134524 L 120.60660171779821,-49.39339828220179 A 15,15 0 0 0 125,-60 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 117.07106781186548,-52.928932188134524 A 10,10 0 0 1 110,-50 L 110,-45 A 15,15 0 0 0 120.60660171779821,-49.39339828220179 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 205,-5 A 40,40 0 0 1 193.2842712474619,23.2842712474619 L 196.81980515339464,26.819805153394636 A 45,45 0 0 0 210,-5 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 193.2842712474619,23.2842712474619 A 40,40 0 0 1 165,35 L 165,40 A 45,45 0 0 0 196.81980515339464,26.819805153394636 Z"
              fill="var(--color-even)"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <path
              d="M 110,35 H 137.5 V 40 H 110 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 137.5,35 H 165 V 40 H 137.5 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier straight-barrier"
          >
            
            <path
              d="M 205,-60 H 210 V -32.5 H 205 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 205,-32.5 H 210 V -5 H 205 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
        <text
          class="svelte-1l7llm0"
          dominant-baseline="middle"
          fill="var(--color-fg)"
          font-size="30px"
          text-anchor="middle"
          x="160"
          y="-10"
        >
          1
        </text>
      </g>
      <g
        class="model svelte-1l7llm0"
        data-id="curved-tile-1"
      >
        <g
          class="tile curved-tile"
          transform=""
        >
          <path
            d="M 240,-60 A 10,10 0 0 1 230,-50 L 230,40 A 100,100 0 0 0 330,-60 Z"
            fill="var(--color-ground)"
            stroke="var(--color-separator)"
            stroke-width="var(--stroke-width-tile)"
          />
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 240,-60 A 10,10 0 0 1 237.07106781186548,-52.928932188134524 L 240.6066017177982,-49.39339828220179 A 15,15 0 0 0 245,-60 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 237.07106781186548,-52.928932188134524 A 10,10 0 0 1 230,-50 L 230,-45 A 15,15 0 0 0 240.6066017177982,-49.39339828220179 Z"
              fill="var(--color-odd)"
            />
          </g>
          <g
            class="barrier curved-barrier"
          >
            
            <path
              d="M 325,-60 A 95,95 0 0 1 317.7685555885722,-23.645073925316474 L 322.3879532511287,-21.731656763491024 A 100,100 0 0 0 330,-60 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 317.7685555885722,-23.645073925316474 A 95,95 0 0 1 297.175144212722,7.175144212722003 L 300.71067811865476,10.71067811865474 A 100,100 0 0 0 322.3879532511287,-21.731656763491024 Z"
              fill="var(--color-even)"
            />
            
            <path
              d="M 297.175144212722,7.175144212722003 A 95,95 0 0 1 266.35492607468353,27.76855558857224 L 268.268343236509,32.38795325112868 A 100,100 0 0 0 300.71067811865476,10.71067811865474 Z"
              fill="var(--color-odd)"
            />
            
            <path
              d="M 266.35492607468353,27.76855558857224 A 95,95 0 0 1 230,35 L 230,40 A 100,100 0 0 0 268.268343236509,32.38795325112868 Z"
              fill="var(--color-even)"
            />
          </g>
        </g>
        
        <text
          class="svelte-1l7llm0"
          dominant-baseline="middle"
          fill="var(--color-fg)"
          font-size="30px"
          text-anchor="middle"
          x="280"
          y="-10"
        >
          1
        </text>
      </g>
      
    </svg>
    
  </div>
</body>
`;
